--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.18.2",
-        "node-fetch": "^3.3.2",
-        "pg": "^8.11.3"
+        "node-fetch": "^3.3.2"
     },
     "engines": {
         "node": ">=18.0.0"
