--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
         "express": "^4.18.2",
         "express-session": "^1.18.2",
         "multer": "^2.0.2",
-        "node-fetch": "^3.3.2"
+        "node-fetch": "^3.3.2",
+        "nodemailer": "^7.0.12",
+        "passport": "^0.7.0",
+        "passport-discord": "^0.1.4"
     },
     "engines": {
         "node": ">=18.0.0"
