--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.18.2",
+        "firebase": "^12.7.0",
+        "firebase-admin": "^13.6.0",
         "multer": "^2.0.2",
         "node-fetch": "^3.3.2",
         "nodemailer": "^7.0.12",
