--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "license": "MIT",
     "dependencies": {
         "better-sqlite3": "^12.5.0",
+        "better-sqlite3-session-store": "^0.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
